flux/apps/arr/librofm-dl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librofm-dl
  namespace: default
spec:
  selector:
    matchLabels:
      app: librofm-dl
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: librofm-dl
    spec:
      containers:
        - name: librofm-dl
          # Versioned tags aren't being published correctly
          image: ghcr.io/burntcookie90/librofm-downloader:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 1551Mi
            limits:
              memory: 1551Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: librofm-dl-data
              mountPath: /data
            - name: media-audiobooks
              mountPath: /media
      volumes:
        - name: librofm-dl-data
          nfs:
            server: datasphere
            path: /Root/Volumes/librofm-dl
        - name: media-audiobooks
          nfs:
            server: datasphere
            path: /Root/Media/Audiobooks
