flux/apps/arr/librofm-dl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librofm-dl
  namespace: default
spec:
  selector:
    app: librofm-dl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
