flux/apps/arr/librofm-dl/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librofm-dl
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`librofm-dl.home`)
      kind: Rule
      services:
        - name: librofm-dl
          port: 80
